# vibe-state-cli

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-lock.txt
.claude/: CLAUDE.md
.claude/rules/: vibe-standards.md
.claude/skills/: .gitkeep  agent-handoff.md  memory-audit.md  memory-compaction.md  project-close.md
.claude/skills/vibe-adapt/: SKILL.md
.claude/skills/vibe-init/: SKILL.md
.claude/skills/vibe-start/: SKILL.md
.claude/skills/vibe-status/: SKILL.md
.claude/skills/vibe-sync/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: adapter_request.md  bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  publish.yml
.vibe/: .gitignore  VIBE.md  config.toml
.vibe/state/: .sync-cursor  architecture.md  archive.md  current.md  experiments.md  standards.md  tasks.md
docs/: DEMO-SCRIPT.md  KNOWN-ISSUES.md  MIGRATION-STRATEGY.md  PUBLISHING.md  USER-GUIDE.md  diagrams.md  release-history.md  v0.3.6-rfc-agents-md-bm-aware-RESPONSE.md  v0.3.6-rfc-agents-md-bm-aware.md  v0.3.6-roadmap-RFC.md
docs/internal/: DEMO-SCRIPT.md  JOURNEY.md
docs/zh-TW/: CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  USER-GUIDE.md
memory-bank/: archive.md  coding-standards.md  current-state.md  implementation_plan.md  task.md
src/vibe_state/: __init__.py  cli.py  config.py  safety.py
src/vibe_state/adapters/: agents_md.py  antigravity.py  base.py  claude.py  cline.py  copilot.py  cursor.py  registry.py  roo.py  windsurf.py
src/vibe_state/commands/: _helpers.py  cmd_adapt.py  cmd_init.py  cmd_start.py  cmd_status.py  cmd_sync.py
src/vibe_state/core/: compactor.py  constants.py  (+7 more)
tests/: conftest.py  test_100pct.py  test_adapters.py  test_autoresearch.py  test_cli.py  test_cli_extended.py  test_cli_integration.py  test_compactor.py  test_config.py  test_coverage_sprint.py  test_final_100.py  test_git_ops.py  test_last_10.py  test_lifecycle.py  test_safety.py  test_scanner.py  test_security.py  test_state.py  test_summary.py
(+12 files in other folders)
