[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibe-state-cli"
version = "0.3.1"
description = "Model-agnostic AI-human collaboration state management CLI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "vibe-state-cli contributors" },
]
keywords = ["ai", "cli", "state-management", "developer-tools", "vibe"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "jinja2>=3.1.0",
    "markdown-it-py>=3.0.0",
    "pydantic>=2.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "tomli-w>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.0.0",
]
mcp = [
    "mcp>=1.27.0",
]

[project.scripts]
vibe = "vibe_state.cli:app"

[project.urls]
Homepage = "https://github.com/vibe-state-cli/vibe-state-cli"
Documentation = "https://vibe-state-cli.github.io/"
Repository = "https://github.com/vibe-state-cli/vibe-state-cli"
Issues = "https://github.com/vibe-state-cli/vibe-state-cli/issues"

[tool.hatch.build.targets.sdist]
include = ["src/vibe_state"]

[tool.hatch.build.targets.wheel]
packages = ["src/vibe_state"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
